# 4wins

./: CMakeLists.txt  board.cpp  board.h  horizontalBot.cpp  horizontalBot.h  human.cpp  human.h  main.cpp  player.cpp  player.h  randomBot.cpp  randomBot.h  verticalBot.cpp  verticalBot.h
